updated ndex.html file

--- a/ndex.html
+++ b/ndex.html
@@ -8,6 +8,6 @@
 <body>
     <h1>test page</h1>
     <p>sb like karo</p>
-    <button>Like</button>
+    <button>Like111111111111111</button>
 </body>
 </html>
